<resources>
    <string name="app_name" translatable="false">EHoTFACTS Erasmus+</string>
    <string name="logbutton">Login in</string>
    <string name="singbutt">No account yet? Create one</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="test" translatable="false">Test connection to database</string>
    <string-array name="Country">
        <item>Select your country</item>
        <item>Poland</item>
        <item>France</item>
        <item>Czekia</item>
        <item>Spain</item>
        <item>Germany</item>
    </string-array>
    <string-array name="Kategorie">
        <item>Aktualnosci</item>
        <item>Events</item>
        <item>Documents</item>
        <item>Members</item>
        <item>Edytuj swoje dane</item>
        <item>O Aplikacji</item>
    </string-array>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Team">Function</string>
    <string name="Repassword">Re-Password</string>
    <string name="Teacher">Are you teacher?</string>
    <string name="signup">Sign up!</string>
    <string name="Concact">Concact</string>
    <string name="title_activity_menu__updates">Menu_Updates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_rssdetail">Detail</string>

    <string name="acivity_forum_add_ask">Ask a Question</string>
    <string name="acivity_forum_add_title">Title of thread</string>
    <string name="acivity_forum_add_category">Category e.g. Building</string>
    <string name="acivity_forum_add_desc">Description</string>
    <string name="acivity_forum_add_conf">Confirm</string>

    <string name="fragment_info_school">School</string>
    <string name="fragment_info_city">City</string>
    <string name="fragment_info_ja">App is being created by
    Bartosz Adamczyk</string>
    <string name="fragment_info_stachu">Website is being created by
    Stanisław Roszkowiak</string>
    <string name="comment_add">Type the comment</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Members">Members</string>
    <string name="Twinspace">Twinspace</string>
    <string name="Our_Website">Our Website</string>
    <string name="Dev_Panel">Dev Panel</string>
    <string name="Support">Support</string>
    <string name="Project_File">Project File</string>
    <string name="Forum">Forum</string>
    <string name="Project_Journal">Project Journal</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginin">Would you like to login without password?</string>
    <string name="login_in">Login In</string>
    <string name="description">Description</string>
    <string name="facebook">Facebook profile</string>
    <string name="notofication">Enable notifications about new posts.</string>
    <string name="notif">Notification</string>


</resources>
