<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lastup"
            android:checked="true"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/Project_Journal" />
        <item
            android:id="@+id/nav_froum"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/Forum" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="Germany 2018" />

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/Project_File" />
        <item
            android:id="@+id/nav_supp"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/Support" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/Dev_Panel" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_tablet_android_black_24dp"
            android:title="@string/Our_Website" />
        <item
            android:id="@+id/nav_twin"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/Twinspace" />
        <item
            android:id="@+id/nav_memb"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/Members" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_perm_device_information_black_24dp"
            android:title="@string/About" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Settings" />
    </group>


</menu>
